@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-16T01:14:02Z",
+  "timestamp" : "2023-07-16T08:12:35Z",
   "count_outdated" : 2589,
   "uniques_outdated" : 978,
-  "count" : 2615,
-  "uniques" : 993,
+  "count" : 2616,
+  "uniques" : 994,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
