@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 8,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2023-07-15T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
